Fix: Reset margin for all elements within the container class in collapsedGroup component

--- a/components/common/collapsedGroup/collapsedGroup.module.css
+++ b/components/common/collapsedGroup/collapsedGroup.module.css
@@ -11,6 +11,11 @@
   grid-auto-columns: minmax(200px, 1fr);
 }
 
+.container *
+{
+  margin: 0;
+}
+
 .groupHeader
 {
   display: grid;
